overflow ios fix

--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -260,7 +260,7 @@ $currentPercentage: 0;
   text-align: start;
   width: 100%;
   white-space: nowrap;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .brIntro {
